<package>
    <name>clear_costmap_on_robot_sides_recovery</name>
    <version>0.0.1</version>
    <description>

        This package provides a recovery behavior for the navigation stack that attempts to clear space on the sides of the robot.

    </description>
    <author>Luigi Palmieri</author>
    <author>contradict@gmail.com</author>
    <maintainer email="palmieri@cs.uni-freiburg.de">Luigi Palmieri</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>eigen</run_depend>

    <export>
        <nav_core plugin="${prefix}/clear_costmap_on_robot_sides_recovery_plugin.xml" />
    </export>
</package>
